--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -72,6 +72,7 @@
                         </div>
                     </div>
                     {% endfor %}
+                    <input class="btn btn-success btn-block" type="submit" value="Submit">
                 </form>
             </div>
             {% endif %}
